# symmetrifier

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  run.sh
include/: App.h  Examples.h  GLFWImGui.h  GLFunctions.h  GLHandle.h  GLHandle.inl  GLInclude.h  GLObjects.h  GUI.h  GUI.tcc  GUICreateMember.h  GUIVariable.h  HeadScene.h  InputManager.h  Layer.h  Layer.inl  Layer.tcc  LayerImage.h  Layering.h  Layering.tcc  Mesh.h  PinwheelPlane.h  QtOpenGLCanvas.h  QtOpenGLSubwindow.h  QtSymmetryCanvas.h  QtWindow.h  Rectangle.h  ShaderCanvas.h  Tiling.h  Window.h  Window.tcc
res/thumbnails/: 2222  22_  22x  2_22  333  3_3  442  4_2  632  _2222  _333  _442  _632  __  _x  o  xx
shaders/: crop_frag.glsl  explode_geom.glsl  frame_frag.glsl  frame_vert.glsl  gui_frag.glsl  gui_vert.glsl  image_frag.glsl  image_vert.glsl  lattice_geom.glsl  lattice_vert.glsl  pinwheel_frag.glsl  pinwheel_vert.glsl  simple_frag.glsl  simple_vert.glsl  symmetrify_frag.glsl  symmetrify_geom.glsl  symmetrify_vert.glsl  tiling_frag.glsl  tiling_geom.glsl  tiling_hq_frag.glsl  tiling_hq_vert.glsl  tiling_vert.glsl  wave_frag.glsl
src/: App.cpp  Examples.cpp  GLFWImGui.cpp  GLFunctions.cpp  GLObjects.cpp  GLUtils.cpp  GUI.cpp  HeadScene.cpp  InputManager.cpp  Layer.cpp  LayerImage.cpp  Layering.cpp  Mesh.cpp  PinwheelPlane.cpp  QtOpenGLCanvas.cpp  QtOpenGLCanvasSubwindow.cpp  QtOpenGLSubwindow.cpp  QtSymmetryCanvas.cpp  QtSymmetryCanvasSubwindow.cpp  QtWindow.cpp  ShaderCanvas.cpp  Tiling.cpp  Window.cpp  main.cpp  stb_image_impl.cpp
